--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,19 @@
         <tag>HEAD</tag>
     </scm>
 
+    <distributionManagement>
+       <repository>
+          <id>github</id>
+          <name>GitHub nitrotm Apache Maven Packages</name>
+          <url>https://maven.pkg.github.com/nitrotm/graylog-plugin-influx</url>
+       </repository>
+    </distributionManagement>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.install.skip>true</maven.install.skip>
-        <maven.deploy.skip>true</maven.deploy.skip>
         <maven.site.skip>true</maven.site.skip>
         <graylog.version>2.1.1</graylog.version>
     </properties>
