--- a/pom.xml
+++ b/pom.xml
@@ -22,25 +22,28 @@
     </developers>
 
     <scm>
-        <connection>scm:git:git@github.com:nitrotm/graylog-plugin-influx.git</connection>
-        <developerConnection>scm:git:git@github.com:nitrotm/graylog-plugin-influx.git</developerConnection>
-        <url>https://github.com/nitrotm/graylog-plugin-influx</url>
+        <connection>scm:git:git@github.com:nitrotm/graylog-plugin-influxdb.git</connection>
+        <developerConnection>scm:git:git@github.com:nitrotm/graylog-plugin-influxdb.git</developerConnection>
+        <url>https://github.com/nitrotm/graylog-plugin-influxdb</url>
         <tag>HEAD</tag>
     </scm>
 
+    <!--
     <distributionManagement>
        <repository>
           <id>github</id>
           <name>GitHub nitrotm Apache Maven Packages</name>
-          <url>https://maven.pkg.github.com/nitrotm/graylog-plugin-influx</url>
+          <url>https://maven.pkg.github.com/nitrotm/graylog-plugin-influxdb</url>
        </repository>
     </distributionManagement>
+    -->
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.install.skip>true</maven.install.skip>
+        <maven.deploy.skip>true</maven.deploy.skip>
         <maven.site.skip>true</maven.site.skip>
         <graylog.version>2.1.1</graylog.version>
     </properties>
@@ -85,7 +88,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <tagNameFormat>@{project.version}</tagNameFormat>
-                    <preparationGoals>clean test</preparationGoals>
+                    <preparationGoals>clean</preparationGoals>
                     <goals>package</goals>
                 </configuration>
             </plugin>
