--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
     <description>Graylog InfluxDB plugin.</description>
     <url>https://www.graylog.org</url>
 
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <developers>
         <developer>
             <name>Antony Ducommun</name>
@@ -36,7 +44,7 @@
         <maven.install.skip>true</maven.install.skip>
         <maven.deploy.skip>true</maven.deploy.skip>
         <maven.site.skip>true</maven.site.skip>
-        <graylog.version>2.1.1</graylog.version>
+        <graylog.version>2.5.2</graylog.version>
     </properties>
 
     <dependencies>
@@ -55,6 +63,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <showWarnings>true</showWarnings>
+                    <showDeprecation>true</showDeprecation>
+                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -79,7 +96,7 @@
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <mavenExecutorId>forked-path</mavenExecutorId>
                     <tagNameFormat>@{project.version}</tagNameFormat>
-                    <preparationGoals>clean</preparationGoals>
+                    <preparationGoals>clean test</preparationGoals>
                     <goals>package</goals>
                 </configuration>
             </plugin>
